fix:horizontal overflow

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #06021d;
+  overflow-x: hidden;
 }
 
 code {
